tests/negative/test_expr_call_arg_unty_bad_type.orb
fnc foo(u32 x) {}

fnc main() {
    foo(-1);
}